Fix overflow on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,8 +726,7 @@ body {
 .overflow-fix {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 95%;
-	min-width: 0;
 }
+
 
 
